Uploaded image for project: 'Qpid'
  1. Qpid
  2. QPID-4546

Unable to delete federation routes or links if connection is not up

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Major
    • Resolution: Fixed
    • 0.18, 0.20
    • 0.21
    • C++ Broker
    • None

    Description

      Step 1) create a route using a source broker address that does not exist.
      Step 2) Attempt to delete that route

      Actual Result: route is never deleted, stuck in "Waiting" state

      Expected Result: route should be deleted.

      Attachments

        Activity

          People

            kgiusti Ken Giusti
            kgiusti Ken Giusti
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: